2009-02-21  Badlop  <badlop@process-one.net>

 	* src/ejabberd_c2s.erl: Ensure unique ID in roster push (EJAB-721)
 	* src/mod_roster.erl: Likewise
 	* src/mod_roster_odbc.erl: Likewise
 	* src/mod_shared_roster.erl: Likewise

2009-02-19  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: fix nodetree plugin resolver

2009-02-13  Christophe Romain <christophe.romain@process-one.net>

	* src/ejabberd_auth.erl: prevent from calling
	get_vh_registered_users/2 when not available

2009-01-13  Badlop  <badlop@process-one.net>

	* doc/release_notes_2.0.3.txt: Minor changes

2009-01-13  Mickael Remond  <mremond@process-one.net>

	* src/tls/Makefile.win32: Windows compilation support.
	* src/tls/tls_drv.c: Likewise.
	* src/tls/stdint.h: Likewise.

	* doc/guide.tex: Update Erlang version in Windows compilation
	documentation.

2009-01-13  Badlop  <badlop@process-one.net>

	* src/msgs/pl.po: Fix typo (thanks to Apag0r)(EJAB-844)

2009-01-12  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Update copyright date 2008 to 2009 (EJAB-842)
	* doc/guide.html: Likewise
	* src/*/*.erl: Likewise
	* src/*/*.erl: Remove unneeded blankspaces in license text

2009-01-11  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: fix owners cache and fix unsubscribe
	permissions (thanks to Andy Skelton)(EJAB-840)
	* src/mod_pubsub/node_default.erl: Likewise

	* src/mod_pubsub/node_default.erl: prevent unauthorized entity to gain
	none-affiliation for given entity (EJAB-840)

2009-01-10  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/node_default.erl: fix unsubscription of full jid
	subscribed node (thanks to Andy Skelton)(EJAB-839)

2009-01-09  Badlop  <badlop@process-one.net>

	* doc/release_notes_2.0.3.txt: New file for new release

	* doc/guide.tex: Improve explanation of backup commands (EJAB-832)
	* doc/guide.html: Likewise
